<resources>

    <string name="app_name">W8er</string>
    <string name="next">Next</string>
    <string name="sing_in">Sing in</string>
    <string name="sing_up_or_log_in">Sing Up or Log In</string>

    <string name="please_confirm_phone_number">Please confirm your country code and enter your phone number</string>
    <string name="enter_the_code">Enter the code we just sent to</string>
    <string name="change_country_code">Change country code</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="support">Support</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="version">Version</string>
    <string name="send">Send</string>
    <string name="feedback">FeedBack</string>
    <string name="cancel">Cancel</string>
    <string name="general_feedback_capital">GENERAL FEEDBACK</string>
    <string name="general_feedback">Briefly explain what you love, or what could improve.</string>
    <string name="done">Done</string>
    <string name="password">Password</string>
    <string name="current">Current</string>
    <string name="current_password">Current Password</string>
    <string name="new_str">New</string>
    <string name="verify">Verify</string>
    <string name="new_password_again">New password, again</string>
    <string name="new_password">New Password</string>
    <string name="password_should_not_be_empty">Password should not be empty.</string>
    <string name="passwords_dont_match">Passwords don\'t match.</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters.</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="about_me">About me</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>
    <string name="move_the_map_until_the_marker_is_directly_over_the_restaurant">Move the map until the marker is directly over the restaurant\n@</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
