<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimaryDark"
        app:layout_scrollFlags="enterAlways|scroll"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:indeterminate="true"
                android:theme="@style/AppTheme.WhiteAccent"
                android:visibility="gone" />


            <Button
                android:id="@+id/save_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:fontFamily="sans-serif"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/background_light">


            <TableRow
                android:id="@+id/tR1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:text="@string/current"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/def_max"
                    android:ems="10"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:background="@drawable/edt_bg_selected"
                    app:backgroundTint="@color/edit_text" />

            </TableRow>

            <TableRow
                android:id="@+id/tR2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tR1"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:text="@string/new_str"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_bg_selected"
                    android:ems="10"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:maxLength="@integer/def_max"
                    android:textSize="16sp"
                    app:backgroundTint="@color/edit_text" />

            </TableRow>

            <TableRow
                android:id="@+id/tR3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tR2"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:text="@string/verify"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_new_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_bg_selected"
                    android:maxLength="@integer/def_max"
                    android:ems="10"
                    android:hint="@string/new_password_again"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    app:backgroundTint="@color/edit_text" />

            </TableRow>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>