<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimaryDark"
        app:layout_scrollFlags="enterAlways|scroll"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/save_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:fontFamily="sans-serif"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/reportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:text="@string/general_feedback_capital"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reportTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reportTitle"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif"
        android:text="@string/general_feedback"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/report_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/reportTextView"
        android:layout_marginTop="5dp"
        android:background="@color/background"
        android:gravity="start|center|top"
        android:inputType="textLongMessage|textMultiLine"
        android:maxLength="@integer/feedback_max"
        android:padding="@dimen/activity_vertical_margin"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:textColor="@color/primary_text" />

</RelativeLayout>
